--- a/slide3.html
+++ b/slide3.html
@@ -6,7 +6,6 @@
 
     <meta charset="utf-8">
     <title> Have Confidence in Urself ! </title>
-    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="slide3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
@@ -18,7 +17,7 @@
 <body>
 
 <div id="fullpage">
-  <div class="section"
+  <div class="section">
   <h1>Why Girls Should Love Themselves</h1>
   <div class="container">
   <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
